feat: add method valueLevel

--- a/index.html
+++ b/index.html
@@ -10,17 +10,22 @@
 </head>
 
 <body>
-    <form>
-        <label>
-            <span>Level</span>
-            <input type = "number" min = "1" max = "6" value = "1" id = "level">
-        </label>
-        <lable>
-            <span>Page</span>
-            <input type = "number" min = "1" max = "60" value = "1" id = "page">
-        </lable>
-        <button>SELECT</button>
-    </form>
+    <div class="game_page-menu">
+        <form class="game_page-selection">
+            <label>
+                <span>Level</span>
+                <input type = "number" min = "1" max = "6" value = "1" id = "level">
+            </label>
+            <lable>
+                <span>Page</span>
+                <input type = "number" min = "1" max = "60" value = "1" id = "page">
+            </lable>
+            <button class="button-selection" id = "select">SELECT</button>
+        </form>
+    </div>
+    <div class="game-page__translate" id ="translate">extract-text-webpack-plugin node_modules</div>
+    <div class="game-page__result-container"></div>
+    <div class="game-page__task-line" id = "task-line">TextTextTextTextTextTextTextTextTextText</div>
 </body>
 
 </html>
