feat: add event

--- a/index.html
+++ b/index.html
@@ -24,8 +24,19 @@
         </form>
     </div>
     <div class="game-page__translate" id ="translate">extract-text-webpack-plugin node_modules</div>
-    <div class="game-page__result-container"></div>
-    <div class="game-page__task-line" id = "task-line">TextTextTextTextTextTextTextTextTextText</div>
+    <div class="game-page__result-container" id = "result-container"></div>
+    <div class="game-page__task-line" id = "task-line">
+        <!-- <span class="word__item">The</span>
+        <span class="word__item">make</span>
+        <span class="word__item">world</span>
+        <span class="word__item">possible</span>
+        <span class="word__item">fuck</span>
+        <span class="word__item">bullshit</span>
+        <span class="word__item">TEXT</span>
+        <span class="word__item">TEXT</span>
+        <span class="word__item">TEXT</span>
+        <span class="word__item">TEXT</span>  -->
+    </div>
 </body>
 
 </html>
