feat: add width response puzzle

--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
         </form>
     </div>
     <div class="game-page__translate" id ="translate">extract-text-webpack-plugin node_modules</div>
-    <div class="game-page__result-container" id = "result-container"></div>
-    <div class="game-page__task-line" id = "task-line">
-        <!-- <span class="word__item">The</span>
-        <span class="word__item">make</span>
-        <span class="word__item">world</span>
-        <span class="word__item">possible</span>
-        <span class="word__item">fuck</span>
-        <span class="word__item">bullshit</span>
-        <span class="word__item">TEXT</span>
-        <span class="word__item">TEXT</span>
-        <span class="word__item">TEXT</span>
-        <span class="word__item">TEXT</span>  -->
+    <div class="game-page__result-container" id = "result-container">
+        <div class="result-container__puzzle" id = '1-str'>1</div>
+        <div class="result-container__puzzle" id = '2-str'>2</div>
+        <div class="result-container__puzzle" id = '3-str'>3</div>
+        <div class="result-container__puzzle" id = '4-str'>4</div>
+        <div class="result-container__puzzle" id = '5-str'>5</div>
+        <div class="result-container__puzzle" id = '6-str'>6</div>
+        <div class="result-container__puzzle" id = '7-str'>7</div>
+        <div class="result-container__puzzle" id = '8-str'>8</div>
+        <div class="result-container__puzzle" id = '9-str'>9</div>
+        <div class="result-container__puzzle" id = '10-str'>10</div>
     </div>
+    <div class="game-page__task-line" id = "task-line"></div>
 </body>
 
 </html>
